<resources>
    <string name="app_name">DeliveryApplication</string>
    <string name="home">홈</string>
    <string name="my">My</string>
    <string name="fast_delivery">배달 빠른순</string>
    <string name="initialize">초기화</string>
    <string name="low_delivery_tip">배달팁 낮은 순</string>
    <string name="default_order">기본 순</string>
    <string name="top_rate">별점 높은 순</string>

    <string name="grade_format">%1$,.1f</string>
    <string name="review_count">(%1$d++)</string>
    <string name="delivery_time">%1$d~%2$d분</string>
    <string name="delivery_tip">배달팁 %1$,d원~%2$,d원</string>
    <string name="price">%,d원</string>
    <string name="please_setup_your_location_permission">위치 권한을 설정해주세요</string>
    <string name="can_not_assigned_permission">권한을 받지 못했습니다</string>
    <string name="can_not_load_address_info">위치를 불러올수 없습니다</string>
    <string name="loading">로딩중..</string>
    <string name="location_not_found">위치 정보 없음</string>
    <string name="set_this_location">이 위치로 주소 설정</string>

    <style name="please_set_your_current_location">위치가 맞는지 확인해주세요!</style>

    <!--Restaurant Detail -->

    <string name="call">전화</string>
    <string name="like">찜</string>
    <string name="share">공유</string>

    <string name="delivery_expected_time">%1$d~%2$d분 소요 예정</string>
    <string name="delivery_tip_range">%1$, d원 ~ %2$, d원</string>
</resources>