<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        style="?attr/toolbarStyle"
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/locationLoading"
            android:layout_width="32dp"
            android:layout_gravity="center"
            android:layout_height="32dp"/>
        <TextView
            android:id="@+id/locationTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="현재위치"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:tabGravity="fill"
        app:tabIndicatorFullWidth="false"
        app:tabMaxWidth="0dp"
        app:tabMode="auto"
        />

    <View
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/gray_168"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <HorizontalScrollView
        android:visibility="gone"
        tools:visibility="visible"
        android:id="@+id/filterScrollView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/tabLayout">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orderChipGroup"
            app:chipSpacingHorizontal="4dp"
            app:chipSpacingVertical="6dp"
            app:singleLine="true"
            app:singleSelection="true"
            app:checkedChip="@id/chipDefault"
            android:paddingHorizontal="12dp"
            app:selectionRequired="true"
            android:visibility="gone"
            tools:visibility="visible"

            >
            <com.google.android.material.chip.Chip
                android:id="@+id/chipInitialize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.deliveryApplication.Chip"
                android:text="@string/initialize"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset"
                android:visibility="gone"
                tools:visibility="visible"
                app:chipIcon="@drawable/ic_refresh"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFastDelivery"
                style="@style/Widget.deliveryApplication.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fast_delivery"
                app:chipIconEnabled="true"
                app:chipIcon="@drawable/ic_thunder"
                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_fast"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLowDeliveryTip"
                style="@style/Widget.deliveryApplication.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_delivery_tip"
                app:chipIconEnabled="true"
                app:chipIcon="@drawable/ic_down"
                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_tip"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDefault"
                style="@style/Widget.deliveryApplication.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_order"
                app:chipIconEnabled="true"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipTopRate"
                style="@style/Widget.deliveryApplication.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/top_rate"
                app:chipIconEnabled="true"
                app:chipIcon="@drawable/ic_star"
                app:chipIconTint="@color/icon_filter_chip_state_list_reset"/>

        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <androidx.viewpager2.widget.ViewPager2
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@id/filterScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/basketButtonContainer"
        >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/basketButton"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_margin="24dp"
            android:src="@drawable/ic_basket"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            />
        <TextView
            android:id="@+id/basketCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:text= "+1"
            android:layout_marginStart="15dp"
            android:textSize="16sp"
            app:flow_verticalBias="0.5"
            app:flow_horizontalBias="0.8"
            android:elevation="16dp"
            app:layout_constraintStart_toStartOf="@id/basketButton"
            app:layout_constraintEnd_toEndOf="@id/basketButton"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintBottom_toBottomOf="@id/basketButton"
            app:layout_constraintTop_toTopOf="@id/basketButton"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>